--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "filemanager",
         "Hengyang",
         "Kanban",
+        "Openeds",
         "Popconfirm",
         "Qihu",
         "sheepzh",
